Most of the tests in win32knt:NtUserEnumDisplaySettings fail due to missing parameters check.
Proposed patch fixes all but 4 tests and I think that failing tests are due to wrong test, not wrong implementation.
Most of the tests in win32knt:NtUserEnumDisplaySettings fail due to missing parameters check.
Proposed patch fixes all but 4 tests and I think that failing tests are due to wrong test, not wrong implementation.